Removed requirejs dependency

--- a/qunit/index.html
+++ b/qunit/index.html
@@ -9,6 +9,23 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   
-  <script src="../bower_components/requirejs/require.js" data-main="SpecRunner"></script>
+  
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../bower_components/handlebars/handlebars.min.js"></script>        
+    <script src="../bower_components/momentjs/min/moment.min.js"></script>
+    <script src="../bower_components/mathjs/dist/math.min.js"></script>
+    <script src="../bower_components/jquery-validation/dist/jquery.validate.min.js"></script>
+
+    <script src="../scripts/app/app.js"></script>
+    <script src="../scripts/app/templates.js"></script> 
+    <script src="../scripts/app/validators.js"></script> 
+    <script src="../scripts/app/helpers.js"></script> 
+    <script src="../scripts/app/guide.js"></script> 
+    <script src="../scripts/app/fieldtypes.js"></script> 
+    
+    <script src="lib/qunit/qunit.min.js"></script>
+    <script src="Specbuilder.js"></script>
+    <script src="spec/Calculator.js"></script>
+    <script src="spec/Emi.js"></script>
 </body>
 </html>
